<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('exercise_attachments', function (Blueprint $table) {
            $table->id();
            $table->foreignId('exercise_id')->constrained()
                ->cascadeOnDelete();
            $table->string('file_path');
            $table->integer('sort_order')->default(0);
            $table->integer('attachment_type');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('exercise_attachments');
    }
};
